Designed tabbed-view for download/upload.
The download tab includes a link to download the graph, and the upload
tab has a form to submit the chosen vertices.

--- a/views/submit/form.jade
+++ b/views/submit/form.jade
@@ -2,4 +2,17 @@ extends ../layout
 
 block content
   .container
-    a(href=submission + '/download') Download
+    ul#tab.nav.nav-tabs
+      li.active
+        a(href='#download', data-toggle='tab') Download
+      li
+        a(href='#upload', data-toggle='tab') Upload
+
+    #tabContent.tab-content
+      #download.tab-pane.fade.active.in
+        a(href=submission + '/download') Download
+
+      #upload.tab-pane.fade
+        form(action='#', method='post', enctype='multipart/form-data')
+          input(type='file', name='vertices')
+          input(type='submit', value='Upload')
