--- a/views/submit/form.jade
+++ b/views/submit/form.jade
@@ -20,6 +20,13 @@ block content
               |  Download
 
       #upload.tab-pane.fade(class=selected === 'upload' ? 'active in' : '')
+        #timer.progress.progress-striped.active
+          .bar.bar-danger(
+            data-remain='#{remain || 0}'
+          , data-timeout='#{timeout || 0}'
+          , style='width: 0%'
+          )
+
         form(action=submission + '/upload', method='post', enctype='multipart/form-data')
           .fileupload.fileupload-new(data-provides='fileupload', data-name='vertices')
             .control-group
@@ -41,3 +48,4 @@ block content
 
 append js
   script(src='/js/bootstrap-fileupload.min.js')
+  script(src='/js/submit-form.js')
