Checks when a (successful) submission has occurred.
Not really the logic we actually care about when trying to prevent a
user from downloading the file, not uploading, then downloading again
later to effectively reset the timer. Need to keep track of when a
graph has been downloaded.

--- a/views/submit/form.jade
+++ b/views/submit/form.jade
@@ -8,8 +8,11 @@ block content
     ul#tab.nav.nav-tabs
       li(class=selected === 'download' ? 'active' : '')
         a(href='#download', data-toggle='tab') Download
-      li(class=selected === 'upload' ? 'active' : '')
-        a(href='#upload', data-toggle='tab') Upload
+      if remain
+        li(class=selected === 'upload' ? 'active' : '')
+          a(href='#upload', data-toggle='tab') Upload
+      else
+        li.disabled: a Upload
 
     #tabContent.tab-content
       #download.tab-pane.fade(class=selected === 'download' ? 'active in' : '')
