Added legend in graph view to display addition info.
Shows the team name and the color of its corresponding nodes in the
network graph. Also has a field for the current score, but does not
update (yet).

--- a/views/graph/graph.jade
+++ b/views/graph/graph.jade
@@ -1,7 +1,10 @@
 extends ../layout
 
 block content
-  #chart.container
+  .container
+    .row
+      #chart.span10
+      #legend.span2
   .container
     .input-prepend.input-append
       button#step-backward.btn.btn-info(type='button')
