--- a/views/graph/dashboard.jade
+++ b/views/graph/dashboard.jade
@@ -20,4 +20,7 @@ block content
           each col, j in row
             td
               if col
-                a(href='graph/' + col) View
+                each entry, k in col
+                  if k !== 0
+                    br
+                  a(href='graph/' + entry) View
