Display list of team participants on hover.

--- a/views/graph/dashboard.jade
+++ b/views/graph/dashboard.jade
@@ -23,4 +23,10 @@ block content
                 each entry, k in col
                   if k !== 0
                     br
-                  a(href='graph/' + entry) View
+                  a(href='graph/' + entry.id,
+                    data-toggle='popover',
+                    data-placement='top',
+                    data-content=entry.teams.join(' ')) View
+
+append js
+  script(src='/js/load-tooltips.js')
