Added instructions for using the application.

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,44 @@ extends layout
 
 block content
   .container
-    p Nothing here yet.
+    h4 Instructions for getting started.
+
+    :markdown
+      1. **Team Registration**
+
+         Register your team [here](/register). After creating your
+         account, you will automatically be logged in. Subsequent logins
+         may be done by visiting [here](/login), and you may log out by
+         visiting [here](/logout).
+
+      2. **List of Graphs Available for Submission**
+
+         You can see a list of available graph [here](/submit), which
+         will change **daily**. Please remember to submit before
+         **11:59pm**.
+
+         During the practice rounds, feel free to submit for as many of
+         the available graphs as you want, keeping in mind it is in your
+         best interest to get as much practice in order to optimize your
+         strategy.
+
+         Each link on the dashboard will take you to a page where you
+         can download a graph, and then upload your choice of seed
+         nodes. Once the download _finishes_ (so you won't be penalized
+         for a slow connection), a timer will start. You can monitor the
+         status of how much time remains by refreshing the page. No more
+         attempts can be made once the timer has expired, but any number
+         of attempts can be made beforehand.
+
+      3. **Submission Results**
+
+         The results of all submission can be viewed [here](/graph), and
+         new ones will be made available the following day by 8:00am.
+         The table lists the scores each team received for their
+         participation on the different graphs, as well as a subtotal
+         for each group of graphs (e.g. day1). Note that you can
+         mouseover on the links to see a list of teams that
+         participated.
+
+         Each link on the dashboard will take you to a page where you
+         can view an animation of the epidemic on the graph.
