Changed look of the page header.

--- a/views/header.jade
+++ b/views/header.jade
@@ -1,3 +1,4 @@
-.hero-unit
-  h1 Pandemaniac
-  h2 competing epidemics
+.container
+  .page-header
+    h1 Pandemaniac #{''}
+      small competing epidemics
