Updated some of the views.
Fixed a typo (control -> controls).

Made sure lines do not exceed 80 characters.

--- a/views/graph/graph.jade
+++ b/views/graph/graph.jade
@@ -5,6 +5,7 @@ block content
     .row
       #chart.span10
       #legend.span2
+  .spacer30
   .container
     .input-prepend.input-append
       button#step-backward.btn.btn-info(type='button')
