Upgraded to Bootstrap 3.

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,2 +1,3 @@
 .container
-  p.pull-right.muted CS 144 | California Institute of Technology
+  .spacer20
+  p.pull-right.text-muted CS 144 | California Institute of Technology
