--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,8 @@ html
     title= title
 
     block css
-      link(rel='stylesheet', href='/css/bootstrap-2.3.2.min.css')
-      link(rel='stylesheet', href='/css/bootstrap-responsive-2.3.2.min.css')
+      link(rel='stylesheet', href='/css/bootstrap-3.0.3.min.css')
+      link(rel='stylesheet', href='/css/bootstrap-theme-3.0.3.min.css')
       link(rel='stylesheet', href='/css/spacer.css')
   body
     include header
@@ -18,4 +18,4 @@ html
 
     block js
       script(src='//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
-      script(src='/js/bootstrap-2.3.2.min.js')
+      script(src='/js/bootstrap-3.0.3.min.js')
