--- a/views/notify.jade
+++ b/views/notify.jade
@@ -3,22 +3,22 @@
     each message in error
       .alert.alert-danger
         button.close(type='button', data-dismiss='alert') &times;
-        h5 #{message}
+        p= message
 
   if (warn)
     each message in warn
       .alert.alert-warning
         button.close(type='button', data-dismiss='alert') &times;
-        h5 #{message}
+        p= message
 
   if (info)
     each message in info
       .alert.alert-info
         button.close(type='button', data-dismiss='alert') &times;
-        h5 #{message}
+        p= message
 
   if (log)
     each message in log
       .alert.alert-success
         button.close(type='button', data-dismiss='alert') &times;
-        h5 #{message}
+        p= message
