--- a/views/submit/dashboard.jade
+++ b/views/submit/dashboard.jade
@@ -2,6 +2,9 @@ extends ../layout
 
 block content
   .container
-    ul.nav.nav-pills.inline
+    ul.nav.nav-pills
       each link in active
-        li: a(href='/submit/' + link.href) #{link.text}
+        li
+          .spacer5
+          a.btn.btn-default(href='/submit/' + link.href)= link.text
+          .spacer5
