Fixed issued with popover from upgrade to Bootstrap 3.
The content option no longer overrides the data attribute. Renamed the
attribute from `content` to `teams-list`.

--- a/views/graph/dashboard.jade
+++ b/views/graph/dashboard.jade
@@ -35,7 +35,7 @@ block content
                       a(href='graph/' + entry.id,
                         data-toggle='popover',
                         data-placement='top',
-                        data-content=entry.teams.join(' '))= entry.score
+                        data-teams-list=entry.teams.join(' '))= entry.score
                 - j++
               td= total
 
