Refactored submissions module in the same way as teams and graphs.
Put each API function into a separate file. Defined a helper module
for the common components of create the Redis key and verifying the
graph exists.

Merged functionality into single object by using `_.extend`.

Also made it so that graph downloads as `x.y.z.json` by default, rather
than the filename as stored on disk if left unspecified.

--- a/views/submit/form.jade
+++ b/views/submit/form.jade
@@ -19,7 +19,7 @@ block content
       #download.tab-pane.fade(class=selected === 'download' ? 'active in' : '')
         .form-group
           .col-sm-4
-            a.btn.btn-primary(href=submission + '/download')
+            a.btn.btn-primary(href=graph + '/download')
               i.glyphicon.glyphicon-download
               |  Download
 
@@ -29,7 +29,7 @@ block content
                                             data-timeout='#{timeout || 0}',
                                             style='width: 0%')
 
-        form(action=submission + '/upload',
+        form(action=graph + '/upload',
              method='post',
              enctype='multipart/form-data')
           .fileupload.fileupload-new(data-provides='fileupload',
