Changed meaning of default style on submission dashboard.
Now is used to indicate that the graph was not attempted before the end
time, since no record of downloads is kept past that point.

--- a/views/submit/dashboard.jade
+++ b/views/submit/dashboard.jade
@@ -37,4 +37,4 @@ block content
       |  and the timer has yet to expire.
     p
       span.label.label-default x.y.z
-      |  indicates that the graph has not been downloaded.
+      |  indicates that the graph was not attempted.
