--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,3 +1,12 @@
 .container
   .spacer20
+  ul.nav.nav-pills.pull-left
+    li: a(href='/') Home
+    li: a(href='/submit') Submit
+    li: a(href='/graph') Results
+    if user
+      li: a(href='/logout') Logout
+    else
+      li: a(href='/login') Login
+  .spacer10
   p.pull-right.text-muted CS 144 | California Institute of Technology
