Fixed a couple typos in the instructions...

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 
       2. **List of Graphs Available for Submission**
 
-         You can see a list of available graph [here](/submit), which
+         You can see a list of available graphs [here](/submit), which
          will change **daily**. Please remember to submit before
          **11:59pm**.
 
@@ -33,9 +33,9 @@ block content
 
       3. **Submission Results**
 
-         The results of all submission can be viewed [here](/graph), and
-         new ones will be made available the following day by 8:00am.
-         The table lists the scores each team received for their
+         The results of all submissions can be viewed [here](/graph),
+         and new ones will be made available the following day by
+         8:00am. The table lists the scores each team received for their
          participation on the different graphs, as well as a subtotal
          for each group of graphs (e.g. day1). Note that you can
          mouseover on the links to see a list of teams that
