Fixed issue with specifying relative URLs.

--- a/views/graph/dashboard.jade
+++ b/views/graph/dashboard.jade
@@ -34,7 +34,7 @@ block content
                             if k !== 0
                               br
                             - var teamsList = entry.teams.join(' ')
-                            a(href='graph/' + entry.id,
+                            a(href='/graph/' + entry.id,
                               data-toggle='popover',
                               data-placement='top',
                               data-teams-list=teamsList)= entry.score
